2006-04-30  Roger Leigh  <rleigh@debian.org>

	* Remove unused .cvsignore files.

2006-04-30  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.cc: Update documentation.

	* schroot/schroot-releaselock.cc: Update documentation.

2006-04-30  Roger Leigh  <rleigh@debian.org>

	* debian/control (Standards-Version): Upgrade to 3.7.0.

2006-04-30  Roger Leigh  <rleigh@debian.org>

	* configure.ac: Bump version to 0.2.10.

	* NEWS: Bump version to 0.2.10.

	* debian/changelog: Bump version to 0.2.10-1.

2006-04-30  Roger Leigh  <rleigh@debian.org>

	* Makefile.am (dist-hook): Don't distribute .svn directories.

2006-04-30  Roger Leigh  <rleigh@debian.org>

	* Version 0.2.9.

	* debian/changelog: Update for 0.2.9.

	* po/en_GB.po: Updated British English translation.

	* README: Document new compiler requirements.

2006-04-30  Roger Leigh  <rleigh@debian.org>

	* NEWS: Document directory behaviour.

	* schroot/sbuild-session.cc (run_child): If the current working
	directory does not exist inside the chroot, change to the home
	directory (for login shells), or fail with an error (for commands)
	where the behaviour must be deterministic.

2006-04-30  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-parse-value.cc: Update tests.

	* schroot/sbuild-keyfile.h (get_value): Catch exceptions thrown by
	parse errors and log a warning.

	* schroot/sbuild-environment.h (get): Catch exceptions thrown by
	parse errors and log a warning.

	* schroot/sbuild-parse-value.cc (parse_value): Add class
	constructor and destructor.
	(parse): Parse functions use this->value rather than a string
	value argument.

	* schroot/sbuild-parse-value.h: Move parse_value functions into
	the generic_value class as private parse methods; the string value
	is taken directly from this->value, rather than passed as an
	argument.  generic_value class renamed to parse_value.  On parse
	failure, an exception is thrown.

2006-04-29  Roger Leigh  <rleigh@debian.org>
